idk anymore, week ago 😅

--- a/_posts/2018-08-20-bananas.md
+++ b/_posts/2018-08-20-bananas.md
@@ -1,5 +1,5 @@
 ---
-author: jill
+opdracht: Opdracht 3
 ---
 A banana is an edible fruit – botanically a berry – produced by several kinds
 of large herbaceous flowering plants in the genus Musa.
